# stompx

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
metrics/: __init__.py  metrics.py
models/: __init__.py  gillespie.py
plots/: __init__.py  plots.py
src/stompx/: __init__.py
src/stompx/metrics/: __init__.py  metrics.py
src/stompx/models/: __init__.py  gillespie.py  montecarlo.py
src/stompx/plots/: __init__.py  _helpers.py  plots.py
src/stompx/utils/: __init__.py  utils.py
utils/: __init__.py  utils.py
